# cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yaml
src/ahar/: main.py
src/ahar/commands/: init.py  show.py
tests/: test_init.py
