[project]
name = "agentharnesses-cli"
version = "0.1.0"
description = "CLI tools for agentharnesses.io"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://agentharnesses.io"
Repository = "https://github.com/agentharnesses/cli"

[project.scripts]
ahar = "ahar.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ahar"]
