[project]
name = "agentharnesses-cli"
dynamic = ["version"]
description = "CLI tools for agentharnesses.io"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://agentharnesses.io"
Repository = "https://github.com/agentharnesses/cli"

[project.scripts]
ahar = "ahar.main:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ahar"]
